# thetakemachine

./: .env.example  .gitignore  Cargo.toml  Procfile  README.md
migrations/2020-05-01-130352_questions/: up.sql
migrations/2020-05-01-143906_answers/: up.sql
migrations/2020-05-10-103708_responses/: up.sql
migrations/2020-05-10-122427_scores/: up.sql
migrations/2020-05-10-155425_response_scores/: down.sql  up.sql
migrations/2020-07-03-133103_create_demographics/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs
src/db/: mod.rs  schema.rs  schema_manual.rs
src/models/: answers.rs  demographics.rs  mod.rs  question_answers.rs  questions.rs  response_scores.rs  responses.rs
src/routes/: catch.rs  mod.rs  quiz.rs  xmas.rs
src/tests/: mod.rs  models.rs  quiz.rs  utils.rs
static/css/: style.css
static/js/: script.js
templates/: layout.hbs  nav.hbs
templates/errors/: 404.hbs  500.hbs
templates/quiz/: about.hbs  analysis.hbs  chart.hbs  demographics.hbs  index.hbs  privacy.hbs  questions.hbs  results.hbs
templates/quiz/analysis/: heatmaps.hbs  timeline.hbs
templates/quiz/analysis/heatmaps/: all.hbs  controls.hbs  gender_man.hbs  gender_other.hbs  gender_woman.hbs  party_brexit.hbs  party_cons.hbs  party_green.hbs  party_lab.hbs  party_libdem.hbs  party_snp.hbs
templates/xmas/: gifts.hbs
