[package]
name = "sauce_code"
version = "0.1.0"
authors = ["Matt Hill <mattalexanderhill@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rand = "0.7.3"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = [
  "diesel_postgres_pool",
  "handlebars_templates",
  "json",
  "serve",
]

[dev-dependencies]
once_cell = "1.2.0"
